<resources>
    <string name="app_name">Asisten Amal Muslim</string>
    <string name="title_sholawat">Sholawat</string>
    <string name="title_Ratib">Ratib</string>
    <string name="sholawat">Sholawat</string>
    <string name="ratib">Ratib</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="SholiAwal">اللّٰهُمَّ صَلِّ وَسَلِّمْ وَبَارِكْ عَلَيْهِ</string>
    <string name="ratib_title">- Ratib Al-Haddad -</string>
    <string name="title_arab">ِ لْحَبِيْب عَبْدِ الله بْنِ عَلَوِي الْحَدَّاد</string>
    <string name="fadhilah_keutamaan_membaca_ratib_al_haddad">Fadhilah Keutamaan Membaca Ratib Al-Haddad</string>
    <string name="fadhilah2">Ratibul Haddad ini sangat dianjurkan dibaca secara bersama-sama dalam majelis dzikir. Sedangkan ketentuan waktu membacanya dijelaskan dalam penjelasan berikut:</string>
    <string name="fadhilah3">وينبغي أن يرتبه كل مرید صادق سيما إن كان صاحب الراتب واسطة له إلى الله تعالى فإن رتبه بعد صلاة العشاء والصبح فذلك هو الاكمل ويكفي ترتيبه في اليوم والليلة مرة والأفضل بعد صلاة العشاء وفى رمضان يقدم هذا الراتب على صلاة العشاء</string>
    <string name="fadhilahket">“Sebaiknya seorang murid yang sungguh-sungguh membaca ratib ini, terlebih ketika penyusun ratib ini merupakan perantara baginya menuju Allah ta’ala. Membaca ratibul haddad ini setelah shalat isya’ dan subuh adalah cara membaca yang paling sempurna, namun membaca ratib ini satu kali dalam sehari semalam dianggap cukup, yang paling utama dilakukan setelah melaksanakan shalat isya’. Sedangkan di bulan Ramadhan, membaca ratib ini didahulukan dari pelaksanaan shalat isya’” (Syekh Abu Bakar bin Ahmad al-Maliabar, al-Imdad bi Syarhi Ratib al-Haddad, Hal. 55)</string>
    <string name="faedahratib">Faedah dari membaca Ratibul Hadad ini terbilang cukup banyak, berikut di antara berbagai fadilah istiqamah mengamalkan ratibul haddad</string>
    <string name="faedah2">و فوائد راتب الحداد منها ما نقل شراح الراتب عن صاحبه رضي الله عنه أن من واظب على قراءته حرس الله بلده أي من البلايا والنقم . ومنها زيادة الغني والبركة والخير في داره. ومنها أن من واظب عليه كل يوم لا يضره السم، ولا يضره السبع والزواحف وسائر الحيوانات. ومنها أنه يحصل عليه حسن الخاتمة ويعطيه الله له التوفيق للنطق بكلمة الشهادة.</string>
    <string name="faedahindo">“Beberapa faedah Ratibul hadad di antaranya, penjelasan yang dikutip dari para ulama yang mensyarahi Rotib ini dari penyusun Ratib, Syekh Abdullah bin ‘alawi al-Haddad Radliyallahu ‘anhu bahwa orang yang rajin membaca rotib ini maka Allah akan menjaga negaranya dari beberapa cobaan dan siksaan. Faedah lainnya, bertambahnya kekayaan, barokah dan kebaikan di rumahnya. Orang yang rajin membaca Ratibul Haddad setiap hari, maka tidak akan bahaya baginya racun, hewan buas, reptil dan hewan-hewan lainnya. Faedah yang lain dari membaca rotib ini bahwa akan hasil baginya husnul khotimah dan Allah akan memberikan pertolongan baginya untuk mengucapkan kalimat syahadat (di Akhir Hayatnya)” (Syekh Abu Bakar bin Ahmad al-Maliabar, al-Imdad bi Syarhi Ratib al-Haddad, hal. 56)</string>
    <string name="penutup">Patut dipahami bagi para pembaca Ratibul Haddad bahwa faedah-faedah di atas tentunya sekiranya tanpa memalingkan niat utama membaca Ratibul Haddad yakni mendekatkan diri kepada Allah subhanahu wa ta’ala. Semoga kita dapat mengamalkan Ratibul Haddad ini dengan istiqamah serta mendapatkan keberkahan dari penyusun Ratibul Haddad, Syekh Abdullah bin ‘alawi al-Haddad. Amin Yaa Rabbal ‘Alamin.</string>
    <string name="sumberutadz">Ustadz M. Ali Zainal Abidin, Pengajar di Pondok Pesantren Annuriyah, Kaliwining, Rambipuji, Jember</string>
    <string name="Sejarah">Sejarah Ratib Al-Haddad</string>
    <string name="sejarah1">Ratib al Haddad diambil dari nama penyusunnya, yakni al Habib Abdullah bin Alwi bin Muhammad al Haddad (1055-1132 H.). Dari beberapa doa-doa dan dzikir-dzikir yang beliau susun, Ratib al Haddad inilah yang paling terkenal dan masyhur. Ratib al Haddad disusun berdasarkan inspirasi, pada malam lailatul Qodar 27 Ramadan 1071 H.</string>
    <string name="sejarah2">Ratib al Haddad disusun untuk memenuhi permintaan seorang murid beliau bernama Amir dari keluarga Bani Sa’ad yang tinggal di Syibam, salah satu perkampungan di Hadramaut, Yaman. Tujuan Amir meminta Habib Abdullah untuk mengarang Ratib, Agar diadakan suatu wirid dan dzikir di kampungnya, agar mereka dapat mempertahankan dan menyelamatkann diri dari ajaran sesat yang sedang melanda Hadramaut ketika itu.</string>
    <string name="sejarah3">Pertama-tama, Ratib ini hanya dibaca di kampung Amir sendiri, yaitu Kota Syibam setelah mendapat izin dan ijazah dari al Habib Abdullah bin Alwi al Haddad sendiri. Selepas itu, Ratib ini pun dibaca di Masjid al Hawi milik beliau yang berada di kota Tarim. Biasanya Ratib ini dibaca secara berjamaah setelah shalat ‘isya’.</string>
    <string name="sejarah4">Pada bulan Ramadan, ratib ini dibaca sebelum shalat Isya untuk mengisi kesempitan waktu menunaikan shalat Tarawih. Ini adalah waktu yang telah ditentukan oleh al Habib Abdullah bin Alwi al Haddad untuk daerah-daerah yang mengamalkan Ratib ini. Biidznillah, daerah-daerah yang mengamalkan ratib ini selamat dan tidak terpengaruh dari kesesatan tersebut.</string>
    <string name="sejarah5">Setelah al Habib Abdullah bin Alwi Al-Haddad berangkat menunaikan ibadah Haji, Ratib al Haddad mulai dibaca di Mekkah dan Madinah. Al Habib Ahmad bin Zain al Habsyi berkata, “Barang siapa yang membaca Ratib al Haddad dengan penuh keyakinan dan iman, ia akan mendapat sesuatu yang di luar dugaannya”.</string>
    <string name="sejarah6">Setiap ayat, doa, dan nama Allah yang disebutkan di dalam ratib ini diambil dari bacaan Al Quran dan Hadis Rasul SAW. bilangan bacaan di setiap doa dibuat sebanyak tiga kali, karena itu adalah bilangan ganjil (witir). Semua ini berdasarkan arahan dari al Habib Abdullah bin Alwi al Haddad sendiri.</string>
    <string name="faedahathos1">Faedah membaca Ratib al-Atthas secara gamblang disebutkan dalam syarahnya, kitab Al-Qirthas Syarah Ratib al-Atthas</string>
    <string name="faaedahaathos1">قال السيد الإمام عیسی بن محمد الحبشي إنه قد ورد عن سيدنا عمر المذكور نفع الله به كلام كثير في فضائل هذا الراتب قال وأتى إليه أناس يشكون الجدب وضيق المعاش فأمرهم بقراءته ثم التوحيد المعروف بعده ففعلوا ففرج الله عنهم ببركته. وقال السيد المذكور أخبرني الثقة عن الشيخ علي بن عبد الله بارأس تلميذ سيدنا عمر أنه رأى كتابا فيه أن من واظب على قراءة هذا الراتب المذكور يرجی أن تغفر ذنوبه</string>
    <string name="faedahaathos2">“Sayyid al-Imam ‘Isa bin Muhammad al-Habsyi berkata: ‘Diriwayatkan dari Tuanku ‘Umar penyusun Ratib al-Atthas perkataan yang cukup banyak tentang keutamaan Ratib ini. Pernah suatu ketika datang kepada Sayyid ‘Umar orang-orang yang berkeluh kesah tentang sengsara dan sulitnya mencari biaya hidup, lalu beliau memerintahkan pada mereka untuk membaca ratib ini dan membaca bacaan tauhid (Lâ ilâha illa Allâh) setelahnya. Mereka pun melakukan perintah itu, tak lama kemudian Allah memberikan kelapangan pada mereka lantaran keberkahan Ratib al-Atthas.’</string>
    <string name="faaedahathos3">Berkata pula Sayyid ‘Isa: ‘Telah mengkhabarkan kepadaku orang yang terpercaya, ia meriwayatkan dari Syekh ‘Ali bin ‘Abdullah Bara’as, murid dari Sayyid ‘Umar bahwa ia melihat tulisan yang didalamnya tercatat ‘Barang siapa yang tekun mengamalkan ratib ini, maka dosa-dosanya diharapkan dapat diampuni’,” (Sayyid ‘Ali bin Hasan bin ‘Abdillah al-Atthas, Al-Qirthas Syarah Ratib al-Atthas, hal. 8).</string>
    <string name="faedahathos4">Selain itu, membaca Ratib al-Atthas juga berfaedah menjaga sebuah daerah atau perkampungan dari turunnya petaka. Seperti dijelaskan dalam lanjutan referensi di atas:</string>
    <string name="faedahathos5">وبلغنا ايضا عن الشيخ علي بن عبد الله باراس أن هذا الراتب إذا قريء في قرية أو محلة كان أمانا لأهلها من الآفات وأنه في حمايته لهم وحراسته إياهم من الآفات مثل سبعين فارسا ولاشك في ذلك ولامرية</string>
    <string name="faaedaahathos6">“Telah sampai padaku riwayat dari Syekh ‘Ali bin ‘Abdillah Bara’as bahwa Roti ini ketika dibaca di perkampungan atau di sebuah daerah maka penghuni perkampungan atau daerah tersebut akan aman dari petaka dan Ratib ini menjaga mereka serta melindungi mereka dari petaka, layaknya dijaga 70 penunggang kuda, hal ini sudah tidak diragukan lagi” (Sayyid ‘Ali bin Hasan bin ‘Abdillah al-Atthas, Al-Qirthas Syarah Ratib al-Atthas, hal. 9).</string>
    <string name="faedahathos7">Diriwayatkan pula bahwa orang yang membaca ratib ini sebanyak 41 kali, maka hajat-hajatnya akan dikabulkan atas seizin Allah subhanahu wa ta’ala.</string>
    <string name="faedah8">Sedangkan cara mengamalkan Ratib al-Atthas dapat dilakukan kapan pun, namun alangkah baiknya dibaca dengan suara yang samar atau pelan-pelan tatkala seseorang membaca ratib ini sendirian. Sedangkan saat membaca secara berjamaah atau dalam suatu majelis, maka dibaca dengan suara yang standar atau tengah-tengah, tidak terlalu pelan dan tidak terlalu keras, sekiranya orang di sampingnya dapat mendengarkan bacaannya. Hal ini seperti yang disampaikan dalam penjelasan berikut:</string>
    <string name="faedahathos9">الوا وكان سيدنا عمر يحب الإسرار بقراءته ويکره شهرته والجهر به . وذلك لأنه نفع الله به بنی أمره كله على اللطف والخمول . وأيضا فالسر أقرب إلى الإخلاص - والأحسن في قراءة هذا الراتب إذا كانوا جماعة أو أفرادا أن توسطوا فيها بين الجهر والإسرار بحيث يسمع بعضهم بعضا لقوله تعالى ( ولاتجهر بصلاتك ولا تخافت بها وابتغ بين ذلك سبيلا)</string>
    <string name="fadilahathoss10">“Para ulama berkata bahwa Sayyid ‘Umar senang membaca ratib ini dengan suara yang pelan, beliau tidak menyukai membaca dengan lantang dan keras. Hal ini dikarenakan beliau mendasarkan setiap urusannya atas jalan lembut dan khumul (tertutup). Selain itu, membaca secara samar lebih dekat untuk mencapai keikhlasan.”</string>
    <string name="fadhilahathos11">Hal yang lebih baik dalam membaca ratib ini, tatkala dibaca secara bersama-sama adalah membacanya dengan suara tengah-tengah antara keras dan pelan, sekiranya sebagian orang mendengarkan suara yang lain, hal demikian berdasarkan firman Allah: ‘Dan janganlah engkau mengeraskan suaramu dalam shalat dan janganlah (pula) merendahkannya dan usahakan jalan tengah di antara kedua itu” (Sayyid ‘Ali bin Hasan bin ‘Abdillah al-Atthas, Al-Qirthas Syarah Ratib al-Atthas, hal. 9).</string>
    <string name="faadhilah12">Dengan demikian, hendaknya bacaan Ratib al-Atthas ini diamalkan dalam keadaan suci (memiliki wudhu) dan di tempat yang sepi. Sebelum mengamalkan ratib ini, alangkah baiknya bertawasul dahulu kepada Rasulullah shallallahu ‘alaihi wa sallam, Habib ‘Umar bin ‘Abdurrahman al-Atthas (penyusun ratib ini), Syekh ‘Ali bin ‘Abdullah Bara’as, dan Habib Ahmad bin Hasan bin ‘Abdullah al-Atthas.</string>
    <string name="fadhilahakhir">Semoga kita dapat mengamalkan ratib al-Atthas dengan penuh khusyuk dan istiqamah, serta mendapatkan limpahan barokah dari penyusun Rotin al-Atthas serta para ulama yang mengamalkan ratib ini. Amin Yaa Rabbal ‘Alamin.</string>
    <string name="ssumber">Ustadz M. Ali Zainal Abidin, pengajar di Pesantren Annuriyah, Kaliwining, Rambipuji, Jember</string>
    <string name="opening_fadilah_athos">Fadhilah Keutamaan Membaca Ratib Al-Atthos</string>
    <string name="ratib_al_atthos">-Ratib Al-Atthos-</string>
    <string name="habib_athos">الحبيب عمر بن عبدالرّحمن العطّاس</string>
    <string name="sejarah_ratib_al_athos">Sejarah Ratib Al-Athos</string>
    <string name="huruf_seekbar">Besar Huruf</string>
    <string name="menu">Menu</string>
</resources>